tests/conformance/typecheck/invalid/break_outside_loop.ks
// EXPECT: break
// EXPECT: loop
fun f(): Unit = { break }
